# rsc-napi-sandbox

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  index.ts  napi.darwin-arm64.node  package.json  pnpm-lock.yaml
src/: lib.rs
src/app/: page.tsx
