[package]
edition = "2021"
name = "napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", features = ["tokio_rt", "async"] }
napi-derive = "2.12.2"
tokio = { version = "1.32", features = ["time"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
